--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
 }
 
 .dashboard__item:hover .tracking-card {
-    opacity: 0.95;
+    background-color: var(--blue-500);
 }
 
 .tracking-card__header, .tracking-card__body {
@@ -164,7 +164,12 @@ body {
     justify-content: space-between;
 }
 
+.tracking-card__header {
+    margin-bottom: 1rem;
+}
+
 .tracking-card__title {
+    margin: 0;
     font-weight: var(--weight-normal);
     font-size: var(--fs-base);
 }
@@ -223,6 +228,19 @@ body {
 
     .view-selector__item:not(:last-child) {
         margin-bottom: 1rem;
+    }
+
+    .tracking-card__body {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .tracking-card__time {
+        margin-bottom: 0.75rem;
+        font-size: 48px;
+    }
+    .tracking-card__header {
+        margin-bottom: 0.75rem;
     }
 }
 
